[package]
name = "rustip"
version = "0.1.0"
edition = "2021"
build="build.rs"
authors = ["chinoll@chinoll.org"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix="0.23.0"
libc="0.2.0"
ifstructs="0.1.1"
arrayref="0.3.6"
[build-dependencies]
cc = "1.0"